# hands-on

./: .gitignore  README.md
backend-testing/: .envrc  README.md  pyproject.toml
backend-testing/src/backend_testing/: calculator.py  calculator_repository.py  calculator_service.py
backend-testing/src/testing_web/: app.py
backend-testing/src/testing_web/apps/calculator/: deps.py  endpoints.py  router.py  schemas.py
backend-testing/tests/: conftest.py  test_calculator.py  test_calculator_repository.py  test_calculator_service.py
backend-testing/tests/backend_testing/: test_calculator.py  test_calculator_service.py
backend-testing/tests/testing_web/apps/calculator/: test_calculate_api.py
getting-started-with-react/hello-world/src/: App.jsx  ContentList.jsx  Subscription.jsx  main.jsx
hello_fastapi/: .gitignore  alembic.ini  pyproject.toml
hello_fastapi/alembic/: env.py  script.py.mako
hello_fastapi/alembic/versions/: 7168dcf24b13_attachment.py  bc5e07390c03_user_todo_tables.py
hello_fastapi/pudding_todo/: admin_app.py  app.py  authentication.py  db.py  exceptions.py  templates.py
hello_fastapi/pudding_todo/apps/account/: admin.py  deps.py  endpoints.py  models.py  router.py  schemas.py  services.py
hello_fastapi/pudding_todo/apps/account/templates/pages/: login.jinja2
hello_fastapi/pudding_todo/apps/common/: endpoints.py  router.py
hello_fastapi/pudding_todo/apps/todo/: admin.py  deps.py  endpoints.py  models.py  router.py  schemas.py  services.py
hello_fastapi/pudding_todo/apps/todo/templates/components/: attachment.jinja2  form-create-todo.jinja2  todo-detail.jinja2
hello_fastapi/pudding_todo/apps/todo/templates/pages/: todo-group-list.jinja2  todo-list.jinja2
hello_fastapi/pudding_todo/apps/todo/templates/partial/: attachment.jinja2  todo-detail.jinja2  todo-group-todos-count.jinja2
hello_fastapi/pudding_todo/templates/: layout.jinja2
hello_fastapi/tests/: conftest.py
hello_fastapi/tests/apps/account/: test_auth_endpoints.py  test_user_service.py
hello_fastapi/tests/apps/todo/: conftest.py  test_todo_endpoint.py  test_todo_group_endpoint.py  test_todo_group_service.py  test_todo_service.py
