[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend_testing"
version = "0.1.0"
authors = [
    { name = "Your Name" },
]
description = "A simple calculator with tests"
requires-python = ">=3.8"
dependencies = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]